# Sukoban

./: .gitignore  OPTIMIZATION_SUMMARY.md  README.md  demo.py  game_manager.py  levels.txt  main.py  pyproject.toml  test_level_generator.py  test_menu_navigation.py
Entities/: box.py  character.py  dock.py  floor.py  wall.py
assets/levels/: AC_Easy.slc  AC_Easy.txt  AC_Selected.slc  AC_Selected.txt  AKK_Informatika.slc  AKK_Informatika.txt  Anomaly.slc  Anomaly.txt  Cosmonotes.slc  Cosmonotes.txt  Cosmopoly.slc  Cosmopoly.txt  Csoko.slc  Csoko.txt
base/: Base.py  __init__.py
benchmark/: FIXES_APPLIED.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  USAGE.md  benchmark_calculation.py  benchmark_data_20251101_194049.json  benchmark_results_20251101_194049.txt  check_setup.py  converted_levels.txt  quick_demo.py  requirements.txt  sample_output.py  test_iterations.py
demo/: demo_features.py
entities/: box.py  character.py  dock.py  floor.py  wall.py
levels/: level.py  level_old.py
log/: __init__.py  logger.py
src/: game_manager.py  test_improved_sa.py
src/algorithms/: __init__.py  astar_search.py  breadth_first_search.py  simulated_annealing.py  sokoban_bot.py
src/base/: base.py
src/entities/: __init__.py  box.py  dock.py  (+3 more)
tests/: performance_test.py  quick_test.py  test_algorithm_time_limits.py  test_algorithms.py  test_astar_level2.py  test_bot_level2.py  test_countdown_timer.py  test_deadlock.py  test_game.py  test_level2_solvable.py  test_level_solvable.py  test_levels.py  test_sa_fitness.py  test_sa_two_boxes.py  test_solution_display.py
(+3 files in other folders)
